--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="hi" class="has-navbar-fixed-top">
   <head>
+    <script
+      data-collect-dnt="true"
+      async
+      src="https://scripts.simpleanalyticscdn.com/latest.js"
+    ></script>
+    <noscript
+      ><img
+        src="https://queue.simpleanalyticscdn.com/noscript.gif?collect-dnt=true"
+        alt=""
+        referrerpolicy="no-referrer-when-downgrade"
+    /></noscript>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ config.title }}</title>
